[gd_scene load_steps=8 format=2]

[ext_resource path="res://Roboto.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/sand.jpg" type="Texture" id=3]
[ext_resource path="res://Assets/GoldNugget.png" type="Texture" id=4]
[ext_resource path="res://Assets/Energy.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 40.0

[sub_resource type="CircleShape2D" id=2]
radius = 66.7533

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="ShootingPointA" type="Node2D" parent="."]
position = Vector2( 38, -43 )

[node name="ShootingPointB" type="Node2D" parent="."]
position = Vector2( 35, 40 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="GoldLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -235.0
margin_top = 43.0
margin_right = -157.0
margin_bottom = 59.0
rect_scale = Vector2( 1.5, 1.5 )
text = "111"
align = 2

[node name="PointsLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -274.0
margin_top = -47.0
margin_right = -170.0
margin_bottom = -32.0
rect_scale = Vector2( 1.5, 1.5 )
text = "111"
align = 2

[node name="EnergyLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -256.0
margin_top = -9.0
margin_right = -164.0
margin_bottom = 7.0
rect_scale = Vector2( 1.5, 1.5 )
text = "111"
align = 2

[node name="Energy" type="Sprite" parent="."]
position = Vector2( -93.75, 10.225 )
scale = Vector2( 0.109, 0.109 )
texture = ExtResource( 5 )

[node name="Points" type="Sprite" parent="."]
modulate = Color( 0.0117647, 0.662745, 0.219608, 1 )
position = Vector2( -96.75, -37.775 )
scale = Vector2( 0.4045, 0.4045 )
texture = ExtResource( 4 )

[node name="Nugget" type="Sprite" parent="."]
position = Vector2( -93.75, 56.225 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 200, 0 )
current = true
smoothing_enabled = true

[node name="Hider" type="Sprite" parent="Camera"]
modulate = Color( 0, 0, 0, 0 )
position = Vector2( 0, -4.76837e-07 )
scale = Vector2( 1.3315, 1.33721 )
z_index = 1
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
